<resources>
    <string name="app_name">Citricos</string>
    <string name="app_version">0.0.0</string>

    <string name="app_name_developer">developed by SIAFESON</string>

    <string name="item_home">Inicio</string>
    <string name="item_profile">Perfil</string>
    <string name="item_catalogs">Catálogos</string>
    <string name="item_registers">Registros</string>

    <string name="menu_info">Info</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_update_catalogs">Actualizar catálogos</string>

    <string name="form_lbl_info_espera">--- Esperando precisión ---</string>
    <string name="form_lbl_info_listo">--- Listo ---</string>

    <!--Home Fragment-->
    <string name="textViewNameDay">Nombre del dia</string>
    <string name="labelLatitude">Latitud</string>
    <string name="labelLongitude">Longitud</string>
    <string name="labelAccuracy">Precisión</string>
    <string name="lblEmpty">---</string>
    <string name="labelCountRegister">Golpeteos registrados</string>
    <string name="labelNearByLocations">Campos cercanos</string>

    <!--Profile Fragment-->
    <string name="textViewUserName">Nombre del técnico</string>
    <string name="textViewJunta">Nombre de la junta local</string>
    <string name="textViewLabelUserID">SIM ID</string>
    <string name="textViewUserId">1234</string>
    <string name="textViewLabelEmail">Email</string>
    <string name="textViewEmail">correro@correro.com</string>
    <string name="textViewLabelJuntaId">Junta ID</string>
    <string name="textViewJuntaId">000</string>


    <!--Catalogs Activity -->
    <string name="com_msj_buscar_elemento">Buscar...</string>

    <!--Login Activity -->
    <string name="labelUsername">Usuario</string>
    <string name="labelPassword">Contraseña</string>
    <string name="btnLogin">Ingresar</string>

    <!--Golpeteo Activity -->
    <string name="labelResource">Recurso de productor?</string>
    <string name="labelNoAdults">Número de adultos</string>
    <string name="btnAdd">Guardar</string>
    <string name="btnSave">Finalizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>