<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/relativeLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/textViewNameDay"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCompleteDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="22 de Noviembre de 2018"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayoutDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDay"
            app:layout_constraintVertical_bias="0.222" />

        <LinearLayout
            android:id="@+id/hrPosition"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="#196F3D"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutDate" />

        <TextView
            android:id="@+id/labelLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/labelLatitude"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/labelLongitude"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hrPosition" />

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/lblEmpty"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/textViewLongitude"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelLatitude" />

        <TextView
            android:id="@+id/labelLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/labelLongitude"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/labelAccuracy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelLatitude"
            app:layout_constraintTop_toBottomOf="@+id/hrPosition" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lblEmpty"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/textViewAccuracy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewLatitude"
            app:layout_constraintTop_toBottomOf="@+id/labelLongitude" />

        <TextView
            android:id="@+id/labelAccuracy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/labelAccuracy"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/labelLongitude"
            app:layout_constraintTop_toBottomOf="@+id/hrPosition" />

        <TextView
            android:id="@+id/textViewAccuracy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/lblEmpty"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewLongitude"
            app:layout_constraintTop_toBottomOf="@+id/labelAccuracy" />

        <LinearLayout
            android:id="@+id/hrCountRegisters"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:background="#196F3D"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAccuracy" />

        <LinearLayout
            android:id="@+id/divCountRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hrCountRegisters">

            <TextView
                android:id="@+id/labelCountRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/labelCountRegister"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTotRegistros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:text="999"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hrNearbyLocations"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:background="#196F3D"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divCountRegister" />

        <TextView
            android:id="@+id/labelLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/labelNearByLocations"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hrNearbyLocations" />

        <LinearLayout
            android:id="@+id/hrLocations"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:background="#196F3D"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelLocations" />

        <include
            android:id="@+id/DivLocationsNearBy"
            layout="@layout/div_locations_nearby"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hrLocations"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>