<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DivProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/bannerProfile"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:scaleType="centerCrop"
            android:src="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bannerProfile"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:text="@string/textViewUserName"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />

        <TextView
            android:id="@+id/textViewJunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/textViewJunta"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />

        <LinearLayout
            android:id="@+id/hr1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/textViewUserName"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="#196F3D"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewJunta" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DivUserID"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/accent_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hr1">

            <ImageView
                android:id="@+id/imageViewUserId"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_userid" />

            <View
                android:id="@+id/viewUserId"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewUserId"
                app:layout_constraintTop_toTopOf="parent" />
º
            <TextView
                android:id="@+id/textViewLabelUserID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewLabelUserID"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/viewUserId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textViewUserId"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewUserId"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelUserID"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DivPersonalID"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/accent_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DivUserID">

            <ImageView
                android:id="@+id/imageViewPersonalId"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_personalid" />

            <View
                android:id="@+id/viewPersonalId"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewPersonalId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLabelPersonalId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="Personal ID"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/viewPersonalId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPersonalId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="6242"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewPersonalId"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelPersonalId"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DivEmailID"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/accent_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DivPersonalID">

            <ImageView
                android:id="@+id/imageViewEmailId"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_mail" />

            <View
                android:id="@+id/viewEmail"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewEmailId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLabelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewLabelEmail"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/viewEmail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textViewEmail"
                android:textColor="@color/cardview_light_background"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewEmail"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelEmail"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DivJuntaId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/accent_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DivEmailID">

            <ImageView
                android:id="@+id/imageViewJuntaId"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_juntaid" />

            <View
                android:id="@+id/viewJuntaId"
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewJuntaId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLabelJuntaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewLabelJuntaId"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/viewJuntaId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewJuntaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textViewJuntaId"
                android:textColor="@color/cardview_light_background"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewJuntaId"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelJuntaId"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/ivCesave"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/cesaveson" />

        <ImageView
            android:id="@+id/ivSiafeson"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivCesave"
            app:srcCompat="@drawable/siafeson_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>